move Spanish section up

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -42,7 +42,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
 
 
-<h3>Our lessons in English</h3>
+<h3>Our Core Lessons in English</h3>
 
 <table class="table table-striped" style="width: 100%; max-width: 100%">
   <tr>
@@ -188,33 +188,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
 </table>
 
-
-
-<div class="row">
-  <div class="medium-4 columns">
-    <p>
-      You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
-      which focus on data organization, cleanup, analysis, and visualization.
-    </p>
-  </div>
-  <div class="medium-4 columns">
-    <p>
-      To learn more about how our lessons are structured, and why,
-      please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>.
-    </p>
-  </div>
-  <div class="medium-4 columns">
-    <p>
-      The template for our workshop websites can be found in
-      <a href="{{site.github_url}}/workshop-template">this repository</a>,
-      and <a href="{{site.github_url}}/styles">the styles repository</a> contains
-      the CSS, Javascript, and other tools and resources these repositories share.
-    </p>
-  </div>
-</div>
-
-
-<h3>Our lessons in Spanish</h3>
+<h3>Our Core Lessons in Spanish</h3>
 
 <table class="table table-striped" style="width: 100%; max-width: 100%">
   <tr>
@@ -268,6 +242,45 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 <p>
   La <a href="https://github.com/swcarpentry/styles-es" target="_blank" title="Estrategia de lección de español"> la plantilla de lección </a> y la <a href = "https: // github.com/Carpentries-ES/workshop-template-es "title =" plantilla de taller de español "target =" _ blank "> plantilla de taller </a> están disponibles en español. Si está interesado en participar en nuestra lección de español <a href="mailto:rayna.harris@gmail.com">contáctenos</a>.
 </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="row">
+  <div class="medium-4 columns">
+    <p>
+      You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
+      which focus on data organization, cleanup, analysis, and visualization.
+    </p>
+  </div>
+  <div class="medium-4 columns">
+    <p>
+      To learn more about how our lessons are structured, and why,
+      please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>.
+    </p>
+  </div>
+  <div class="medium-4 columns">
+    <p>
+      The template for our workshop websites can be found in
+      <a href="{{site.github_url}}/workshop-template">this repository</a>,
+      and <a href="{{site.github_url}}/styles">the styles repository</a> contains
+      the CSS, Javascript, and other tools and resources these repositories share.
+    </p>
+  </div>
+</div>
+
+
+
 
 
 <h2 id="video">Videos</h2>
