fix contact email

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -236,11 +236,11 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 </table>
 
 <p>
-  The <a href="https://github.com/swcarpentry/styles-es" target="_blank" title="Spanish lesson template">lesson template</a> and the <a href="https://github.com/Carpentries-ES/workshop-template-es" title="Spanish workshop tempalte" target="_blank">workshop template</a> are available in Spanish. If you are interested in getting involved with our Spanish lessons <a href="#">contact us</a>.
+  The <a href="https://github.com/swcarpentry/styles-es" target="_blank" title="Spanish lesson template">lesson template</a> and the <a href="https://github.com/Carpentries-ES/workshop-template-es" title="Spanish workshop tempalte" target="_blank">workshop template</a> are available in Spanish. If you are interested in getting involved with our Spanish lessons <a href="mailto:{{site.contact}}">contact us</a>.
 </p>
 
 <p>
-  La <a href="https://github.com/swcarpentry/styles-es" target="_blank" title="Estrategia de lección de español"> la plantilla de lección </a> y la <a href = "https: // github.com/Carpentries-ES/workshop-template-es "title =" plantilla de taller de español "target =" _ blank "> plantilla de taller </a> están disponibles en español. Si está interesado en participar en nuestra lección de español <a href="mailto:rayna.harris@gmail.com">contáctenos</a>.
+  La <a href="https://github.com/swcarpentry/styles-es" target="_blank" title="Estrategia de lección de español"> la plantilla de lección </a> y la <a href = "https: // github.com/Carpentries-ES/workshop-template-es "title =" plantilla de taller de español "target =" _ blank "> plantilla de taller </a> están disponibles en español. Si está interesado en participar en nuestra lección de español <a href="mailto:{{site.contact}}">contáctenos</a>.
 </p>
 
 
