move lessons out of core section

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -85,28 +85,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   </tr>
 
 
-  <tr id="hg">
-    <td>Version Control with Mercurial</td>
-    <td><a href="{{site.github_io_url}}/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
-    <td><a href="{{site.github_url}}/hg-novice" target="_blank" class="icon-github" title="Version Control with Mercurial"></a></td>
-    <td><a href="{{site.github_io_url}}/hg-novice/reference" target="_blank" class="icon-eye" title="Version Control with Mercurial"></a></td>
-    <td><a href="{{site.github_io_url}}/hg-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Mercurial Instructor Guide"></a></td>
-    <td>
-      <a href="{{site.baseurl}}/team/#latornell_d">Doug Latornell</a>
-    </td>
-  </tr>
-
-
-  <tr id="sql">
-    <td>Using Databases and SQL</td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Guide"></a></td>
-    <td>
-      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>, Sam Hames, Henry Senyondo
-    </td>
-  </tr>
+ 
 
 
   <tr id="python">
@@ -163,28 +142,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   </tr>
 
 
-  <tr id="matlab">
-    <td>Programming with MATLAB</td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Matlab Instructor Guide"></a></td>
-    <td>
-      <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath </a>
-    </td>
-  </tr>
 
-
-  <tr id="make">
-    <td>Automation and Make</td>
-    <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/reference" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Make Instructor Guide"></a></td>
-    <td>
-      <a href="{{site.baseurl}}/team/#capes_gerard">Gerard Capes</a>
-    </td>
-  </tr>
 
 </table>
 
@@ -244,7 +202,72 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 </p>
 
 
+<h3>Additional Lessons</h3>
 
+<table class="table table-striped" style="width: 100%; max-width: 100%">
+  <tr>
+    <th>Lesson</th>
+    <th>Site</th>
+    <th>Repository</th>
+    <th>Reference</th>
+    <th>Instructor Guide</th>
+    <th>Maintainer(s)</th>
+  </tr>
+
+  <tr id="matlab">
+    <td>Programming with MATLAB</td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB"></a></td>
+    <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Matlab Instructor Guide"></a></td>
+    <td>
+      <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath </a>
+    </td>
+  </tr>
+
+
+  <tr id="make">
+    <td>Automation and Make</td>
+    <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make"></a></td>
+    <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/reference" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Make Instructor Guide"></a></td>
+    <td>
+      <a href="{{site.baseurl}}/team/#capes_gerard">Gerard Capes</a>
+    </td>
+  </tr>
+
+ <tr id="hg">
+    <td>Version Control with Mercurial</td>
+    <td><a href="{{site.github_io_url}}/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.github_url}}/hg-novice" target="_blank" class="icon-github" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.github_io_url}}/hg-novice/reference" target="_blank" class="icon-eye" title="Version Control with Mercurial"></a></td>
+    <td><a href="{{site.github_io_url}}/hg-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Mercurial Instructor Guide"></a></td>
+    <td>
+      <a href="{{site.baseurl}}/team/#latornell_d">Doug Latornell</a>
+    </td>
+  </tr>
+
+
+  <tr id="sql">
+    <td>Using Databases and SQL</td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Guide"></a></td>
+    <td>
+      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>, Sam Hames, Henry Senyondo
+    </td>
+  </tr>
+
+
+
+
+
+
+
+
+</table>
 
 
 
