reorganize some text

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -9,8 +9,17 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
 
 <p>
-  A Software Carpentry workshop is taught by two trained and badged instructors. Over two days, they teach our three core topics: the Unix shell, version control with Git, and a programming language (Python or R). Curricula for these lessons in English and Spanish (select lessons only) are below.
+  A Software Carpentry workshop is taught by two trained and badged instructors. Over two days, they teach our three core topics: the Unix shell, version control with Git, and a programming language (Python or R). Curricula for these lessons in English and Spanish (select lessons only) are below. 
+
+  To learn more about how our lessons are structured, and why, please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>.  
 </p>
+
+<p>
+  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
+  which focus on data organization, cleanup, analysis, and visualization.
+</p>
+
+
 
 <div class="row">
   <div class="medium-4 columns">
@@ -142,9 +151,15 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   </tr>
 
 
-
-
 </table>
+
+
+<p>
+The template for our workshop websites can be found in <a href="{{site.github_url}}/workshop-template">this repository</a>, and <a href="{{site.github_url}}/styles">the styles repository</a> contains the CSS, Javascript, and other tools and resources these repositories share.
+</p>
+
+
+
 
 <h3>Our Core Lessons in Spanish</h3>
 
@@ -269,38 +284,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
 </table>
 
-
-
-
-
-
-
-
-
-
-
-<div class="row">
-  <div class="medium-4 columns">
-    <p>
-      You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
-      which focus on data organization, cleanup, analysis, and visualization.
-    </p>
-  </div>
-  <div class="medium-4 columns">
-    <p>
-      To learn more about how our lessons are structured, and why,
-      please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>.
-    </p>
-  </div>
-  <div class="medium-4 columns">
-    <p>
-      The template for our workshop websites can be found in
-      <a href="{{site.github_url}}/workshop-template">this repository</a>,
-      and <a href="{{site.github_url}}/styles">the styles repository</a> contains
-      the CSS, Javascript, and other tools and resources these repositories share.
-    </p>
-  </div>
-</div>
 
 
 <h2 id="capstones">Contributed</h2>
