update language in contributing section

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -11,7 +11,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 <p>
   A Software Carpentry workshop is taught by two trained and badged instructors. Over two days, they teach our three core topics: the Unix shell, version control with Git, and a programming language (Python or R). Curricula for these lessons in English and Spanish (select lessons only) are below. 
 
-  To learn more about how our lessons are structured, and why, please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>.  
 </p>
 
 <p>
@@ -44,8 +43,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <h4>Contributing</h4>
     <p>
-      If you have questions about contributing to particular lessons, please contact their maintainers (listed below).  For information on how to contribute to our lessons, see our <a href="https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md">contributors guide.</a>
-    </p>
+      If you have questions about contributing to particular lessons, please contact their maintainers (listed below).  For information on how to contribute to our lessons, see our <a href="https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md">contributors guide.</a>   To learn more about how our lessons are structured, and why, please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>. 
+     </p>
   </div>
 </div>
 
