fixed line breaks in text

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -14,8 +14,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 </p>
 
 <p>
-  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
-  which focus on data organization, cleanup, analysis, and visualization.
+  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>, which focus on data organization, cleanup, analysis, and visualization.
 </p>
 
 
@@ -24,20 +23,14 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <h4>Curriculum</h4>
     <p>
-      Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>.
-      You can check the status of each lesson on <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>,
-      or look at <a href="{{site.baseurl}}/lessons/previous">older releases</a>.
+      Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>. You can check the status of each lesson on <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>, or look at <a href="{{site.baseurl}}/lessons/previous">older releases</a>.
     </p>
   </div>
   <div class="medium-4 columns">
     <h4>Availability</h4>
     <p>
-      All of our lessons are freely available under
-      the <a href="{{site.baseurl}}/license/">Creative Commons - Attribution License</a>.
-      You may re-use and re-mix the material in any way you wish,
-      without asking permission,
-      provided you cite us as the original source
-      (e.g., provide a link back to this website).
+      All of our lessons are freely available under the <a href="{{site.baseurl}}/license/">Creative Commons - Attribution License</a>.  You may re-use and re-mix the material in any way you wish,
+      without asking permission, provided you cite us as the original source (e.g., provide a link back to this website).
     </p>
   </div>
   <div class="medium-4 columns">
