--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -36,7 +36,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <h4>Contributing</h4>
     <p>
-      If you have questions about contributing to particular lessons, please <a href="mailto:{{site.contact}}">contact us</a> or submit an issue on that lesson's GitHub repo (listed below).  For more information on how to contribute to our lessons, see our <a href="https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md">contributors guide</a>.  To learn more about how our lessons are structured, and why, please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>. 
+      If you have questions about contributing to our lessons, please <a href="mailto:{{site.contact}}">contact us</a>.  You can also visit each lesson's GitHub repo to submit an issue or to get the link to join that lesson's Maintainers' discussion on Slack. For general information on how to contribute to our lessons, see our <a href="https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md">contributors guide</a>.  To learn more about how our lessons are structured, and why, please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>. 
      </p>
   </div>
 </div>
