--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -273,7 +273,7 @@ The template for our workshop websites can be found in <a href="{{site.github_ur
 
 <h2 id="capstones">Contributed</h2>
 <p>
-  These are Carpentries style lessons that have been contributed by community members and are not part of Software Carpentry's official offerings.  If you have a lesson to include here, please <a href="mailto:{{site.contact}}">contact us</a> so we can review your lesson for inclusion here.  Lessons should use our template, be hosted in an original GitHub repo (not a fork), be offered under an open license, have been taught at least once, and be actively maintained (with at least one lead maintainer)l
+  These are Carpentries style lessons that have been contributed by community members and are not part of Software Carpentry's official offerings.  If you have a lesson to include here, please <a href="mailto:{{site.contact}}">contact us</a> so we can review your lesson for inclusion here.  To be considered, lessons should use our template, be hosted in an original GitHub repo (not a fork), be offered under an open license, have been taught at least once, and be actively maintained (with at least one lead maintainer).
 </p>
 
 </p>
