move contact out of contributing

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -17,6 +17,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>, which focus on data organization, cleanup, analysis, and visualization.
 </p>
 
+<p>
+  Please <a href="mailto:{{site.contact}}">contact us</a> with any general questions.
+</p>
+
 
 
 <div class="row">
@@ -36,7 +40,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <h4>Contributing</h4>
     <p>
-      If you have questions about contributing to our lessons, please <a href="mailto:{{site.contact}}">contact us</a>.  You can also visit each lesson's GitHub repo to submit an issue or to get the link to join that lesson's Maintainers' discussion on Slack. For general information on how to contribute to our lessons, see our <a href="https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md">contributors guide</a>.  To learn more about how our lessons are structured, and why, please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>. 
+      If you have questions about contributing to our lessons visit each lesson's GitHub repo to submit an issue or to get the link to join that lesson's Maintainers' discussion on Slack. For general information on how to contribute to our lessons, see our <a href="https://github.com/swcarpentry/git-novice/blob/gh-pages/CONTRIBUTING.md">contributors guide</a>.  To learn more about how our lessons are structured, and why, please see <a href="{{site.carp_gh_io_url}}/lesson-example">the example lesson</a>. 
      </p>
   </div>
 </div>
