description in additional lessons section

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -215,6 +215,10 @@ The template for our workshop websites can be found in <a href="{{site.github_ur
 
 <h2>Additional Lessons</h2>
 
+<p>
+  These lessons are not commonly taught as part of a standard Software Carpentry workshop but can be offered as supplementary lessons.  Please <a href="mailto:{{site.contact}}">contact us</a> for more information.
+ </p>
+
 <table class="table table-striped" style="width: 100%; max-width: 100%">
   <tr>
     <th>Lesson</th>
