clarify use of lesson and workshop templates

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -151,10 +151,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
 
 <p>
-The template for our workshop websites can be found in <a href="{{site.github_url}}/workshop-template">this repository</a>, and <a href="{{site.github_url}}/styles">the styles repository</a> contains the CSS, Javascript, and other tools and resources these repositories share.
+<a href="{{site.github_url}}/styles">The lesson template</a> (used to build each lesson page) and the <a href="{{site.github_url}}/workshop-template">workshop template </a> (used to build each scheduled workshop's website) are available on GitHub. 
 </p>
-
-
 
 
 <h2>Our Core Lessons in Spanish</h2>
