update language in additional lessons section

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -214,7 +214,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 <h2>Additional Lessons</h2>
 
 <p>
-  These lessons are not commonly taught as part of a standard Software Carpentry workshop but can be offered as supplementary lessons.  Please <a href="mailto:{{site.contact}}">contact us</a> for more information.
+  These lessons are not part of Software Carpentry core lessons but can be offered as supplementary lessons. Please <a href="mailto:{{site.contact}}">contact us</a> for more information.
  </p>
 
 <table class="table table-striped" style="width: 100%; max-width: 100%">
