remove maintainer without website bio

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -79,9 +79,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Git Instructor Guide"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#gonzalez_ivan">Ivan Gonzalez</a>,
-      <a href="{{site.baseurl}}/team/#huang_daisie">Daisie Huang</a>,
-      <a href="{{site.baseurl}}/team/#hejazi_nima">Nima Hejazi</a>,
-      Katherine Koziar, Madicken Munk
+      <a href="{{site.baseurl}}/team/#huang_daisie">Daisie Huang</a>, Nima Hejazi, Katherine Koziar, Madicken Munk
     </td>
   </tr>
 
