--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -7,11 +7,7 @@ redirect_from:
 excerpt: how to request a Software Carpentry workshop at your institution
 ---
 <p>
-  If you would like to host a Software Carpentry workshop at your
-  institution, please fill in the form below to let us know a bit more
-  about your needs and someone will contact you as soon as
-  possible. For more information on how our workshops are run, please
-  read our <a href="{{site.baseurl}}/workshops/operations/">operations guide</a>.
+  If you would like to host a Software Carpentry workshop at your institution, please fill in the form below to let us know a bit more about your needs and someone will contact you as soon as possible. For more information on how our workshops are run, please read our <a href="{{site.baseurl}}/workshops/operations/">operations guide</a>.
 </p>
 
 <div align="center">
@@ -31,56 +27,31 @@ excerpt: how to request a Software Carpentry workshop at your institution
 <h3>Expenses and Fees</h3>
 
 <p>
-  Our instructors are volunteers, and so are not paid for their
-  teaching, but host sites are <strong>required to cover travel and
-  accommodation costs for any instructors visiting from out of town</strong>.
-  The Software Carpentry Foundation offers three fee schedules
-  for workshops:
+  Our instructors are volunteers, and so are not paid for their teaching, but host sites are <strong>required to cover travel and accommodation costs for any instructors visiting from out of town</strong>.
 </p>
-<ul>
-  <li>
-    <h4>Self-Organized Workshops: Optional Donation</h4>
-    <p>
-      Software Carpentry welcomes you to organize and run your own workshop
-      without administrative assistance from the Software Carpentry Foundation
-      <strong>by optional donation</strong>. This means you are already connected 
-      with our certified instructors and will work with them on all aspects of 
-      workshop organization, including curriculum and lesson planning
-      as well as logistical details such as student registration.  In order to use the
-      Software Carpentry name and logo at your event, we only
-      require that you follow our curriculum, have at least one badged instructor teaching and
-      co-organizing your event, and <a href="mailto:{{site.contact}}">let us know</a>
-      that you're organizing a workshop. In order to help Software Carpentry
-      continue operating and offering workshops around the world,
-      we ask for (but <strong>do not require</strong>) a donation,
-      and recommend $500 USD as a suitable amount.
-    </p>
-  </li>
-  <li>
-    <h4>Nonprofit Organization: $2500</h4>
-    <p>
-      If you are a not-for-profit, such as a university or government
-      lab, the Software Carpentry Foundation will organize a workshop
-      for you (not including instructor travel and accommodation
-      costs) for $2500 USD.
-    </p>
-  </li>
-  <li>
-    <h4>For-Profit Institution: $10000</h4>
-    <p>
-      If you are a for-profit institution, such as a company,
-      the Software Carpentry Foundation will organize a workshop
-      for you (not including instructor travel and accommodation
-      costs) for $10,000 USD, of which three quarters is used to underwrite
-      workshops at institutions that could otherwise not afford
-      them.
-    </p>
-  </li>
-</ul>
 <p>
-  We strive to be a global project and support diversity in science.
-  If you wish to offer a workshop that would further these goals,
-  please <a href="mailto:{{site.contact}}">contact us</a> regarding
-  a waiver for the administration fee at the nonprofit and for-profit
-  scales. Waivers are not required for self-organized workshops.
+The cost of hosting a workshop is both the Workshop Administration Fee and travel expenses for the two instructors. 
+</p>
+
+<p>
+<h4>Workshop Administration Fee (Government and non-profit institutions):</h4> 
+$2500 US  <br>
+This is the fee for not-for-profit organizations, such as universities and government labs. For information on fees for for-profit organizations, please <a href="mailto:{{site.contact}}">contact us</a>.  50% of workshop coordination fees for for-profit organizations go towards supporting workshops in areas with financial need. Partial or full waivers for fees will be considered on an as-needed basis.
+<br>
+All invoices will be issued by Community Initiatives, our fiscal sponsor.  The Carpentries staff will work with host sites to manage the invoicing process. 
+</p>
+
+<p>
+<h4>Travel Expenses for Instructors:</h4> 
+$2000 US (estimate) <br>
+All instructors are volunteers, but the Host needs to cover their travel expenses.  We work to find local instructors, but suggest that you estimate about $2000 for the travel, food and accomodation of the instructors. The details of how you will reimburse the instructors needs to be established when the workshop is scheduled. The Carpentries is not involved in this process.
+</p>
+
+<p>
+<h4>Self organized workshops</h4>
+Software Carpentry welcomes you to organize and run your own workshop without administrative assistance from our staff.  This means you are already connected with our certified instructors and will work with them on all aspects of workshop organization, including curriculum and lesson planning as well as logistical details such as student registration. In order to use the Software Carpentry name and logo at your event, we only require that you follow our curriculum, have at least one badged instructor teaching and co-organizing your event, and let us know that you're organizing a workshop. There is no fee (mandated or suggested) due to us for running a self-organized workshop.
+</p>
+
+<p>
+We strive to be a global project and support diversity in science. If you wish to offer a workshop that would further these goals, please <a href="mailto:{{site.contact}}">contact us</a> regarding a waiver for the administration fee at the nonprofit and for-profit scales. 
 </p>
