--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
   Since 1998,
   Software Carpentry has been teaching researchers
   the computing skills they need to get more done in less time and with less pain.
-  Our <a href="{{site.baseurl}}/team/">volunteer instructors</a>
+  Our <a href="https://carpentries.org/instructors/">volunteer instructors</a>
   have run <a href="{{site.baseurl}}/workshops/past/">hundreds of events</a>
   for more than 34,000 researchers since 2012.
   All of our <a href="{{site.baseurl}}/lessons/">lesson materials</a> are freely reusable
@@ -16,7 +16,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
 </p>
 <p>
   The <a href="{{site.baseurl}}/scf/">Software Carpentry Foundation</a>
-  and its sibling project, <a href="{{site.dc_url}}">Data Carpentry</a>,
+  and its sibling lesson project, <a href="{{site.dc_url}}">Data Carpentry</a>,
   have merged to become The Carpentries, a fiscally sponsored project of <a href="http://communityin.org">Community Initiatives</a>,
   a 501(c)3 non-profit incorporated in the United States. See the <a href="https://carpentries.org/team/">staff page for The Carpentries</a>.
 </p>
@@ -28,9 +28,9 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <p>
       Software Carpentry is made possible by the generous support of
       <a href="{{site.baseurl}}/scf/partners/">our partners</a>
-      and by the hard work of <a href="{{site.baseurl}}/join/">our volunteers</a>.
-      We offer <a href="{{site.baseurl}}/membership/">several levels of institutional engagement</a>,
-      and individuals can <a href="{{site.baseurl}}/join">participate</a> become instructors.
+      and by the hard work of <a href="https://carpentries.org/community/">our volunteers</a>.
+      We offer <a href="https://carpentries.org/membership/">several levels of institutional engagement</a>,
+      and individuals can <a href="{{site.baseurl}}/join">participate</a> and become instructors.
     </p>
   </div>
 
@@ -39,10 +39,9 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <p>
       You can <a href="{{site.baseurl}}/workshops/request/">host a workshop</a>
       or <a href="{{site.baseurl}}/workshops/">attend one</a> that someone else is hosting.
-      Our <a href="{{site.baseurl}}/conduct/">code of conduct</a>
-      and <a href="{{site.baseurl}}/workshops/operations/">operations guides</a>
-      describe how our workshops are run,
-      and our <a href="{{site.baseurl}}/faq/">answers other questions</a>.
+      Our <a href="https://docs.carpentries.org/topic_folders/policies/code-of-conduct.html">code of conduct</a>
+      and <a href="https://docs.carpentries.org/topic_folders/hosts_instructors/index.html">operations guides</a>
+      describe how our workshops are organised and run.
     </p>
   </div>
 
@@ -50,10 +49,10 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <h4>Conversations</h4>
     <p>
       You can <a href="mailto:{{site.contact}}">send us email</a>,
-      <a href="{{site.baseurl}}/join/">sign up for our newsletter</a>,
-      <a href="{{site.baseurl}}/blog/">read our blog</a>,
-      <a href="{{site.data.socialmedia.Twitter.url}}">follow us on Twitter</a>,
-      or browse <a href="{{site.data.socialmedia.GitHub.url}}">our repositories on GitHub</a>.
+      <a href="https://carpentries.org/newsletter/">sign up for our newsletter</a>,
+      <a href="https://carpentries.org/blog/">read our blog</a>,
+      <a href="https://twitter.com/swcarpentry">follow Software Carpentry</a> and <a href="https://twitter.com/thecarpentries">follow The Carpentries</a> on Twitter,
+      or browse <a href="https://github.com/swcarpentry">our repositories on GitHub</a>.
     </p>
   </div>
 
@@ -89,8 +88,10 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <p>
       Want to show your support? You can <a href="{{site.baseurl}}/join/donate/">donate</a>,
       or vist our <a href="http://www.cafepress.com/swcarpentry">online store</a>
-      offering everything from maternity shirts to messenger bags,
-      and you can <a href="http://www.stickermule.com/user/1070632011/stickers">buy our stickers</a> too.
+      offering everything from maternity shirts to messenger bags.
+   <!---
+      and you can <a href="http://www.stickermule.com/user/1070632011/stickers">buy our stickers</a> too. -->
+      
     </p>
   </div>
 
