--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <p>
       Software Carpentry is made possible by the generous support of
       <a href="{{site.baseurl}}/scf/partners/">our partners</a>
-      and by the hard work of <a href="https://carpentries.org/community/">our volunteers</a>.
+      and by the hard work of <a href="https://carpentries.org/community">our volunteers</a>.
       We offer <a href="https://carpentries.org/membership/">several levels of institutional engagement</a>,
       and individuals can <a href="{{site.baseurl}}/join">participate</a> and become instructors.
     </p>
@@ -51,7 +51,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
       You can <a href="mailto:{{site.contact}}">send us email</a>,
       <a href="https://carpentries.org/newsletter/">sign up for our newsletter</a>,
       <a href="https://carpentries.org/blog/">read our blog</a>,
-      <a href="https://twitter.com/swcarpentry">follow Software Carpentry</a> and <a href="https://twitter.com/thecarpentries">follow The Carpentries</a> on Twitter,
+      follow <a href="https://twitter.com/swcarpentry">Software Carpentry</a> and <a href="https://twitter.com/thecarpentries">The Carpentries</a> on Twitter,
       or browse <a href="https://github.com/swcarpentry">our repositories on GitHub</a>.
     </p>
   </div>
@@ -88,10 +88,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <p>
       Want to show your support? You can <a href="{{site.baseurl}}/join/donate/">donate</a>,
       or vist our <a href="http://www.cafepress.com/swcarpentry">online store</a>
-      offering everything from maternity shirts to messenger bags.
-   <!---
-      and you can <a href="http://www.stickermule.com/user/1070632011/stickers">buy our stickers</a> too. -->
-      
+      offering everything from maternity shirts to messenger bags.     
     </p>
   </div>
 
