add gerard as MATLAB Maintainer

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -235,7 +235,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Matlab Instructor Guide"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath </a>
+      <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath </a>,
+      <a href="{{site.baseurl}}/team/#capes_gerard">Gerard Capes</a>
     </td>
   </tr>
 
