--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,8 +4,10 @@ permalink: /faq/
 title: Frequently Asked Questions
 redirect_from:
   - /faq.html
-excerpt: These are our most frequently asked questions
+excerpt: Find answers to questions
 ---
 
-Find FAQs and other support material in our [Carpentries FAQs and Support](https://info.carpentries.org/) page.
+Most questions can be answered by [The Carpentries website](https://carpentries.org/) or 
+by the [Carpentries Handbook](https://docs.carpentries.org/). Please [contact us](https://carpentries.org/contact/) if you cannot 
+find the information you need. 
 
