--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -51,7 +51,7 @@ excerpt: definition of a Software Carpentry workshop
     <a href="{{site.baseurl}}/lessons/"><img src="{{site.filesurl}}/workshops/dc-2014.jpg" alt="Data Carpentry 2014" /></a>
     <a href="https://docs.carpentries.org/topic_folders/hosts_instructors/index.html/"><h4>Want to Run a Workshop?</h4></a>
     <p>
-      See our <a href="https://docs.carpentries.org/topic_folders/hosts_instructors/index.html/">teaching and hosting guide</a>.
+      See our <a href="https://docs.carpentries.org/topic_folders/hosts_instructors/index.html">teaching and hosting guide</a>.
     </p>
   </div>
   <div class="medium-4 columns">
