--- a/pages/team.html
+++ b/pages/team.html
@@ -2,30 +2,9 @@
 layout: page-fullwidth
 permalink: /team/
 title: Our Instructors
-map_url: instructors.json
-map_element: map_canvas
 redirect_from:
   - /pages/team.html
+redirect_to:
+  - https://carpentries.org/instructors/
 excerpt: our current team
 ---
-<div id="map_canvas" style="width: 98%; height: 500px; margin-left:auto; margin-right: auto; margin-bottom: 15px"></div>
-
-<div align="center">
-  {% for flag in site.data.amy.flags.airports %}
-    <img src="{{site.filesurl}}/flags/32/{{flag}}.png" alt="{{flag|replace:'-',' '}}" />
-    {% unless forloop.last %}
-      {% assign loopindex = forloop.index0 | modulo: 16 %}
-      {% if loopindex == 15 %}
-      <br/>
-      {% endif %}
-    {% endunless %}
-  {% endfor %}
-</div>
-
-<div class="row">
-  {% for person in site.data.includes.people %}
-    <div class="medium-6 columns">{% include {{person}} %}</div>
-    {% cycle '', '</div>' %}
-    {% cycle '', '<div class="row">' %}
-  {% endfor %}
-</div>
