--- a/pages/about.html
+++ b/pages/about.html
@@ -27,10 +27,11 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <h4>Supporters</h4>
     <p>
       Software Carpentry is made possible by the generous support of
-      <a href="{{site.baseurl}}/scf/partners/">our partners</a>
+      <a href="https://carpentries.org/members/">our member organisations</a>
       and by the hard work of <a href="https://carpentries.org/community">our volunteers</a>.
-      We offer <a href="https://carpentries.org/membership/">several levels of institutional engagement</a>,
-      and individuals can <a href="{{site.baseurl}}/join">participate</a> and become instructors.
+      We offer <a href="https://carpentries.org/membership/">several levels of institutional engagement</a>. We provide 
+      <a href="https://carpentries.org/community">many 
+        ways</a> people can engage with our community.
     </p>
   </div>
 
@@ -48,11 +49,11 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
   <div class="medium-4 columns">
     <h4>Conversations</h4>
     <p>
-      You can <a href="mailto:{{site.contact}}">send us email</a>,
+      You can <a href="mailto:team@carpentries.org">send us email</a>,
       <a href="https://carpentries.org/newsletter/">sign up for our newsletter</a>,
       <a href="https://carpentries.org/blog/">read our blog</a>,
       follow <a href="https://twitter.com/swcarpentry">Software Carpentry</a> and <a href="https://twitter.com/thecarpentries">The Carpentries</a> on Twitter,
-      or browse <a href="https://github.com/swcarpentry">our repositories on GitHub</a>.
+      or browse and raise issues against <a href="https://github.com/swcarpentry">our repositories on GitHub</a>.
     </p>
   </div>
 
@@ -65,9 +66,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
     <p>
       As an open source project,
       we rely on volunteers to
-      <a href="{{site.baseurl}}/lessons/">create our lessons</a>
-      and
-      <a href="{{site.baseurl}}/join/projects/">build our tools</a>.
+      <a href="{{site.baseurl}}/lessons/">create our lessons</a>.
     </p>
   </div>
 
@@ -86,7 +85,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
   <div class="medium-4 columns">
     <h4>Buy Things</h4>
     <p>
-      Want to show your support? You can <a href="{{site.baseurl}}/join/donate/">donate</a>,
+      Want to show your support? You can <a href="https://carpentries.org/donate/">donate</a>,
       or vist our <a href="http://www.cafepress.com/swcarpentry">online store</a>
       offering everything from maternity shirts to messenger bags.     
     </p>
