--- a/pages/join_related.html
+++ b/pages/join_related.html
@@ -13,11 +13,14 @@ excerpt: Our sibling project Data Carpentry develops and teaches workshops on th
       Our sibling project Data Carpentry develops and teaches workshops on the fundamental data skills needed to conduct research.
       Its mission is to provide researchers high-quality, domain-specific training covering the full lifecycle of data-driven research.
       Where Software Carpentry teaches best practices in software development,
-      its focus is on the introductory computational skills needed for data management and analysis in all domains of research.
-      Its lessons are domain specific,
-      from life and physical sciences to social science
+      Data Carpentry's focus is on the introductory computational skills needed for data management and analysis in all domains of research.
+      Its lessons are domain-specific,
+      from life and physical sciences to social and geospatial sciences
       and build on the existing knowledge of learners to enable them to quickly apply skills learned to their own research.
       Their target audience is learners who have little to no prior computational experience.
+    </p>
+    <p>Software Carpentry and Data Carpentry have now merged their projects to form The Carpentries, but will continue to main their 
+      separate, individual lesson and workshop identities and development.
     </p>
   </div>
 </div>
