--- a/pages/index.html
+++ b/pages/index.html
@@ -36,13 +36,13 @@ excerpt: Teaching researchers the foundational computing skills they need to get
   <div class="medium-4 columns">
     <h3>Upcoming Workshops</h3>
     <table class="table table-striped workshops">
-      {% for w in site.data.amy.workshops_current %}
+      {% for w in site.data.SWC_upcoming_workshops_plain %}
       <tr>
 	<td>
 	  <img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' '}}" alt="{{w.country | replace: '-', ' ' | downcase}}" />
 	  <a href="{{w.url}}">{{w.venue}}</a>
 	  <br/>
-	  {{w.humandate}}
+	  {{w.start_date | date: "%b %-d"}} - {{w.end_date | date: "%b %-d, %Y"}}
 	</td>
       </tr>
       {% endfor %}
