--- a/pages/index.html
+++ b/pages/index.html
@@ -41,8 +41,16 @@ excerpt: Teaching researchers the foundational computing skills they need to get
 	<td>
 	  <img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' '}}" alt="{{w.country | replace: '-', ' ' | downcase}}" />
 	  <a href="{{w.url}}">{{w.venue}}</a>
-	  <br/>
+          <br/>
 	  {{w.start_date | date: "%b %-d"}} - {{w.end_date | date: "%b %-d, %Y"}}
+          {% if w.instructors %}
+          <br/>
+          <b>Instructors:</b> {{ w.instructors | replace: ",", ", "}}
+          {% endif %}
+          {% if w.helpers %}
+          <br/>
+          <b>Helpers:</b> {{ w.helpers  | replace: ",", ", "}}
+          {% endif %}
 	</td>
       </tr>
       {% endfor %}
