--- a/pages/workshops_past.html
+++ b/pages/workshops_past.html
@@ -27,7 +27,9 @@ excerpt: listing of all our past workshops
 
 <div style="text-align: center; margin-bottom: 15px">
   {% for flag in flags %}
+  {% if flag != "" %}
   <img src="{{site.filesurl}}/flags/32/{{flag | downcase }}.png" title="{{flag | replace: '-',' ' | downcase }}" alt="{{flag | replace: '-',' '}}" />
+  {% endif %}
     {% unless forloop.last %}
       {% assign loopindex = forloop.index0 | modulo: 16 %}
       {% if loopindex == 15 %}
@@ -40,9 +42,23 @@ excerpt: listing of all our past workshops
 <table class="table table-striped workshops" style="width: 100%;">
   {% for w in site.data.SWC_past_workshops_plain %}
   <tr>
-    <td><img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' '}}" alt="{{w.country | replace: '-', ' '}}" /></td>
-    <td class="link"><a href="{{w.url}}">{{w.venue}}</a></td>
-    <td class="date">{{w.start_date | date: "%b %-d"}} - {{w.end_date | date: "%b %-d, %Y"}}</td>
+    <td>
+      {% if flag != "" %}
+      <img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' '}}" alt="{{w.country | replace: '-', ' '}}" style="max-width: inherit;" />
+      {% endif %}
+    </td>
+    <td class="link">
+      <a href="{{w.url}}">{{w.venue}}</a>
+      {% if w.instructors %}
+      <br/>
+      <b>Instructors:</b> {{ w.instructors | replace: ",", ", "}}
+      {% endif %}
+      {% if w.helpers %}
+      <br/>
+      <b>Helpers:</b> {{ w.helpers  | replace: ",", ", "}}
+      {% endif %}
+    </td>
+    <td class="date" style="width: 20%">{{w.start_date | date: "%b %-d"}} - {{w.end_date | date: "%b %-d, %Y"}}</td>
   </tr>
   {% endfor %}
 </table>
